--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
                     <div class="text-5xl text-teal-500 mb-4">1</div>
                     <h3 class="text-2xl font-bold mb-4">Proven Operational Excellence</h3>
                     <p class="text-slate-600 leading-relaxed">
-                        As COO of BMT Diagnostics, I drove strategic growth by re-engineering the company's core processes. I led a landmark project with the Israeli Ministry of Economy to build a state-of-the-art automated manufacturing line and led international business development to expand our global footprint. This experience demonstrates a concrete ability to scale operations, manage complex projects, and deliver extraordinary results.
+                        As COO of BMT Diagnostics, I drove strategic growth by re-engineering the company's core processes. I led a landmark project to build a state-of-the-art automated manufacturing line and led international business development to expand our global footprint. This experience demonstrates a concrete ability to scale operations, manage complex projects, and deliver extraordinary results.
                     </p>
                 </div>
-                <!-- Pillar 2: Technological Mastery -->
+                <!-- Pillar 2: Technological  -->
                 <div class="pillar-card bg-white rounded-xl shadow-lg p-8 border border-slate-200">
                     <div class="text-5xl text-teal-500 mb-4">2</div>
                     <h3 class="text-2xl font-bold mb-4">Foundational Tech Mastery</h3>
                     <p class="text-slate-600 leading-relaxed">
-                        With a B.Sc. in Electrical Engineering and over two decades immersed in the family's medical device business, my technical foundation is deep. I have proactively self-taught advanced AI, Computer Vision, and Data Science, and personally architected the core technology for RapidTest.ai. This pillar showcases the hands-on expertise required to build and lead a technology-first company.
+                        With learning Electrical Engineering and over two decades immersed in the family's medical device business, my technical foundation is deep. I have proactively self-taught advanced AI, Computer Vision, and Data Science, and personally architected the core technology for RapidTest.ai. This pillar showcases the hands-on expertise required to build and lead a technology-first company.
                     </p>
                 </div>
                 <!-- Pillar 3: Strategic Leadership -->
@@ -229,7 +229,7 @@
             <div class="flex justify-center items-center space-x-6 text-slate-300">
                 <span>Tel Aviv, Israel</span>
                 <span>&#8226;</span>
-                <a href="mailto:roy.tamir.ceo@email.com" class="hover:text-teal-300 transition">roy.tamir.ceo@email.com</a>
+                <a href="mailto:roey@rapidtest.ai" class="hover:text-teal-300 transition">roy.tamir.ceo@email.com</a>
             </div>
         </div>
     </footer>
