--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div class="flex justify-center items-center space-x-6 text-slate-300">
                 <span>Tel Aviv, Israel</span>
                 <span>&#8226;</span>
-                <a href="mailto:roey@rapidtest.ai" class="hover:text-teal-300 transition">roy.tamir.ceo@email.com</a>
+                <a href="mailto:roey@rapidtest.ai" class="hover:text-teal-300 transition">roey@rapidtest.ai</a>
             </div>
         </div>
     </footer>
